--- a/cuisines.html
+++ b/cuisines.html
@@ -64,7 +64,7 @@
 </div>
     <div class="row text-center mt-3" id="dishes">
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="tteokbokki.jpeg" class="card-img-top" alt="Tteokbokki">
                 <div class="card-body">
                     <h5 class="card-title">Tteokbokki</h5>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="tonkatsu.jpg" class="card-img-top" alt="Tonkatsu">
                 <div class="card-body">
                     <h5 class="card-title">Tonkatsu</h5>
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="xlb.jpg" class="card-img-top" alt="Xiaolongbao">
                 <div class="card-body">
                     <h5 class="card-title">Xiaolongbao</h5>
@@ -96,7 +96,7 @@
     </div>
     <div class="row text-center mt-3" id="dishes">
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="kimbap.jpg" class="card-img-top" alt="Kimbap">
                 <div class="card-body">
                     <h5 class="card-title">Kimbap</h5>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="okonomiyaki.jpg" class="card-img-top" alt="Okonomiyaki">
                 <div class="card-body">
                     <h5 class="card-title">Okonomiyaki</h5>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card mx-auto" style="width: 350px; margin-left: 5px; max-width: 100%; height: auto;">
+            <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="chowmein.webp" class="card-img-top" alt="Chow Mein">
                 <div class="card-body">
                     <h5 class="card-title">Chow Mein</h5>
