--- a/cuisines.html
+++ b/cuisines.html
@@ -48,22 +48,22 @@
 
 <div class="container text-center my-5" id="cuisine">
     <div class="row text-center" >
-      <div class="col-lg-3" id="cuisine1">
+      <div class="col-md-4" id="cuisine1">
         <h3>Korean</h3>
         <p> Dishes from Korea! </p>
       </div>
-      <div class="col-lg-3" id="cuisine2">
+      <div class="col-md-4" id="cuisine2">
         <h3>Japanese</h3>
          <p> Dishes from Japan! </p>
       </div>
-      <div class="col-lg-3" id="cuisine3">
+      <div class="col-md-4" id="cuisine3">
         <h3>Chinese</h3>
          <p> Dishes from China! </p>
       </div>
     </div>
 </div>
     <div class="row text-center mt-3" id="dishes">
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="tteokbokki.jpeg" class="card-img-top" alt="Tteokbokki">
                 <div class="card-body">
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="tonkatsu.jpg" class="card-img-top" alt="Tonkatsu">
                 <div class="card-body">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="xlb.jpg" class="card-img-top" alt="Xiaolongbao">
                 <div class="card-body">
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="row text-center mt-3" id="dishes">
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="kimbap.jpg" class="card-img-top" alt="Kimbap">
                 <div class="card-body">
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="okonomiyaki.jpg" class="card-img-top" alt="Okonomiyaki">
                 <div class="card-body">
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-4">
             <div class="card mx-auto" style="width: 350px; max-width: 100%; height: auto;">
                 <img src="chowmein.webp" class="card-img-top" alt="Chow Mein">
                 <div class="card-body">
